--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -26,73 +26,258 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# preparing dataset.\n",
-    "\n",
-    "df = pd.read_csv('healthcare-dataset-stroke-data.csv')\n",
-    "df = df.fillna(0)\n",
-    "\n",
-    "# ---------------------------------------- #\n",
-    "\n",
-    "df = df.replace(to_replace=\"Male\",value=\"0\")\n",
-    "df = df.replace(to_replace=\"Female\",value=\"1\")\n",
-    "df = df.replace(to_replace=\"Other\",value=\"2\")\n",
-    "\n",
-    "df = df.replace(to_replace=\"No\",value=\"0\")\n",
-    "df = df.replace(to_replace=\"Yes\",value=\"1\")\n",
-    "\n",
-    "df = df.replace(to_replace=\"Never_worked\",value=\"0\")\n",
-    "df = df.replace(to_replace=\"Private\",value=\"1\")\n",
-    "df = df.replace(to_replace=\"Self-employed\",value=\"2\")\n",
-    "df = df.replace(to_replace=\"Govt_job\",value=\"3\")\n",
-    "df = df.replace(to_replace=\"children\",value=\"4\")\n",
-    "\n",
-    "df = df.replace(to_replace=\"Rural\",value=\"0\")\n",
-    "df = df.replace(to_replace=\"Urban\",value=\"1\")\n",
-    "\n",
-    "df = df.replace(to_replace=\"never smoked\",value=\"0\")\n",
-    "df = df.replace(to_replace=\"formerly smoked\",value=\"1\")\n",
-    "df = df.replace(to_replace=\"smokes\",value=\"2\")\n",
-    "df = df.replace(to_replace=\"Unknown\",value=\"3\")\n",
-    "\n",
-    "# ---------------------------------------- #"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "cannot do slice indexing on RangeIndex with these indexers [2555.0] of type float",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Pedro Antônio Silva\\Desktop\\Semestre 3\\Algebra Linear\\APS6\\avc-classifier-avaliation\\demo.ipynb Cell 3\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Pedro%20Ant%C3%B4nio%20Silva/Desktop/Semestre%203/Algebra%20Linear/APS6/avc-classifier-avaliation/demo.ipynb#W4sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m x \u001b[39m=\u001b[39m df[\u001b[39m0\u001b[39;49m:\u001b[39mlen\u001b[39;49m(df)\u001b[39m/\u001b[39;49m\u001b[39m2\u001b[39;49m]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Pedro%20Ant%C3%B4nio%20Silva/Desktop/Semestre%203/Algebra%20Linear/APS6/avc-classifier-avaliation/demo.ipynb#W4sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m y \u001b[39m=\u001b[39m df[\u001b[39mlen\u001b[39m(df)\u001b[39m/\u001b[39m\u001b[39m2\u001b[39m:]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Pedro%20Ant%C3%B4nio%20Silva/Desktop/Semestre%203/Algebra%20Linear/APS6/avc-classifier-avaliation/demo.ipynb#W4sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m X_train, X_test, y_train, y_test \u001b[39m=\u001b[39m train_test_split(X, y, train_size\u001b[39m=\u001b[39m\u001b[39m0.5\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\Pedro Antônio Silva\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\frame.py:3477\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3474\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_get_item_cache(key)\n\u001b[0;32m   3476\u001b[0m \u001b[39m# Do we have a slicer (on rows)?\u001b[39;00m\n\u001b[1;32m-> 3477\u001b[0m indexer \u001b[39m=\u001b[39m convert_to_index_sliceable(\u001b[39mself\u001b[39;49m, key)\n\u001b[0;32m   3478\u001b[0m \u001b[39mif\u001b[39;00m indexer \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m   3479\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(indexer, np\u001b[39m.\u001b[39mndarray):\n",
-      "File \u001b[1;32mc:\\Users\\Pedro Antônio Silva\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\indexing.py:2324\u001b[0m, in \u001b[0;36mconvert_to_index_sliceable\u001b[1;34m(obj, key)\u001b[0m\n\u001b[0;32m   2322\u001b[0m idx \u001b[39m=\u001b[39m obj\u001b[39m.\u001b[39mindex\n\u001b[0;32m   2323\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(key, \u001b[39mslice\u001b[39m):\n\u001b[1;32m-> 2324\u001b[0m     \u001b[39mreturn\u001b[39;00m idx\u001b[39m.\u001b[39;49m_convert_slice_indexer(key, kind\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mgetitem\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m   2326\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39misinstance\u001b[39m(key, \u001b[39mstr\u001b[39m):\n\u001b[0;32m   2327\u001b[0m \n\u001b[0;32m   2328\u001b[0m     \u001b[39m# we are an actual column\u001b[39;00m\n\u001b[0;32m   2329\u001b[0m     \u001b[39mif\u001b[39;00m key \u001b[39min\u001b[39;00m obj\u001b[39m.\u001b[39mcolumns:\n",
-      "File \u001b[1;32mc:\\Users\\Pedro Antônio Silva\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\indexes\\numeric.py:279\u001b[0m, in \u001b[0;36mNumericIndex._convert_slice_indexer\u001b[1;34m(self, key, kind)\u001b[0m\n\u001b[0;32m    275\u001b[0m     \u001b[39m# We always treat __getitem__ slicing as label-based\u001b[39;00m\n\u001b[0;32m    276\u001b[0m     \u001b[39m# translate to locations\u001b[39;00m\n\u001b[0;32m    277\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mslice_indexer(key\u001b[39m.\u001b[39mstart, key\u001b[39m.\u001b[39mstop, key\u001b[39m.\u001b[39mstep)\n\u001b[1;32m--> 279\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49m_convert_slice_indexer(key, kind\u001b[39m=\u001b[39;49mkind)\n",
-      "File \u001b[1;32mc:\\Users\\Pedro Antônio Silva\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\indexes\\base.py:4042\u001b[0m, in \u001b[0;36mIndex._convert_slice_indexer\u001b[1;34m(self, key, kind)\u001b[0m\n\u001b[0;32m   4040\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mis_integer() \u001b[39mor\u001b[39;00m is_index_slice:\n\u001b[0;32m   4041\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_validate_indexer(\u001b[39m\"\u001b[39m\u001b[39mslice\u001b[39m\u001b[39m\"\u001b[39m, key\u001b[39m.\u001b[39mstart, \u001b[39m\"\u001b[39m\u001b[39mgetitem\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m-> 4042\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_validate_indexer(\u001b[39m\"\u001b[39;49m\u001b[39mslice\u001b[39;49m\u001b[39m\"\u001b[39;49m, key\u001b[39m.\u001b[39;49mstop, \u001b[39m\"\u001b[39;49m\u001b[39mgetitem\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m   4043\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_validate_indexer(\u001b[39m\"\u001b[39m\u001b[39mslice\u001b[39m\u001b[39m\"\u001b[39m, key\u001b[39m.\u001b[39mstep, \u001b[39m\"\u001b[39m\u001b[39mgetitem\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m   4044\u001b[0m     \u001b[39mreturn\u001b[39;00m key\n",
-      "File \u001b[1;32mc:\\Users\\Pedro Antônio Silva\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\indexes\\base.py:6308\u001b[0m, in \u001b[0;36mIndex._validate_indexer\u001b[1;34m(self, form, key, kind)\u001b[0m\n\u001b[0;32m   6305\u001b[0m \u001b[39massert\u001b[39;00m kind \u001b[39min\u001b[39;00m [\u001b[39m\"\u001b[39m\u001b[39mgetitem\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39miloc\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[0;32m   6307\u001b[0m \u001b[39mif\u001b[39;00m key \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m is_integer(key):\n\u001b[1;32m-> 6308\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_invalid_indexer(form, key)\n",
-      "\u001b[1;31mTypeError\u001b[0m: cannot do slice indexing on RangeIndex with these indexers [2555.0] of type float"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>age</th>\n",
+       "      <th>hypertension</th>\n",
+       "      <th>heart_disease</th>\n",
+       "      <th>avg_glucose_level</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>stroke</th>\n",
+       "      <th>gender_Female</th>\n",
+       "      <th>gender_Male</th>\n",
+       "      <th>gender_Other</th>\n",
+       "      <th>...</th>\n",
+       "      <th>work_type_Never_worked</th>\n",
+       "      <th>work_type_Private</th>\n",
+       "      <th>work_type_Self-employed</th>\n",
+       "      <th>work_type_children</th>\n",
+       "      <th>Residence_type_Rural</th>\n",
+       "      <th>Residence_type_Urban</th>\n",
+       "      <th>smoking_status_Unknown</th>\n",
+       "      <th>smoking_status_formerly smoked</th>\n",
+       "      <th>smoking_status_never smoked</th>\n",
+       "      <th>smoking_status_smokes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>9046</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>228.69</td>\n",
+       "      <td>36.6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>51676</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>202.21</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>31112</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>105.92</td>\n",
+       "      <td>32.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>60182</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>171.23</td>\n",
+       "      <td>34.4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1665</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>174.12</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      id   age  hypertension  heart_disease  avg_glucose_level   bmi  stroke  \\\n",
+       "0   9046  67.0             0              1             228.69  36.6       1   \n",
+       "1  51676  61.0             0              0             202.21   0.0       1   \n",
+       "2  31112  80.0             0              1             105.92  32.5       1   \n",
+       "3  60182  49.0             0              0             171.23  34.4       1   \n",
+       "4   1665  79.0             1              0             174.12  24.0       1   \n",
+       "\n",
+       "   gender_Female  gender_Male  gender_Other  ...  work_type_Never_worked  \\\n",
+       "0              0            1             0  ...                       0   \n",
+       "1              1            0             0  ...                       0   \n",
+       "2              0            1             0  ...                       0   \n",
+       "3              1            0             0  ...                       0   \n",
+       "4              1            0             0  ...                       0   \n",
+       "\n",
+       "   work_type_Private  work_type_Self-employed  work_type_children  \\\n",
+       "0                  1                        0                   0   \n",
+       "1                  0                        1                   0   \n",
+       "2                  1                        0                   0   \n",
+       "3                  1                        0                   0   \n",
+       "4                  0                        1                   0   \n",
+       "\n",
+       "   Residence_type_Rural  Residence_type_Urban  smoking_status_Unknown  \\\n",
+       "0                     0                     1                       0   \n",
+       "1                     1                     0                       0   \n",
+       "2                     1                     0                       0   \n",
+       "3                     0                     1                       0   \n",
+       "4                     1                     0                       0   \n",
+       "\n",
+       "   smoking_status_formerly smoked  smoking_status_never smoked  \\\n",
+       "0                               1                            0   \n",
+       "1                               0                            1   \n",
+       "2                               0                            1   \n",
+       "3                               0                            0   \n",
+       "4                               0                            1   \n",
+       "\n",
+       "   smoking_status_smokes  \n",
+       "0                      0  \n",
+       "1                      0  \n",
+       "2                      0  \n",
+       "3                      1  \n",
+       "4                      0  \n",
+       "\n",
+       "[5 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = df[0:len(df)/2]\n",
-    "y = df[len(df)/2:]\n",
+    "# preparing dataset.\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.5)"
+    "dfo = pd.read_csv('healthcare-dataset-stroke-data.csv')\n",
+    "dfo = dfo.fillna(0)\n",
+    "\n",
+    "# ---------------------------------------- #\n",
+    "\n",
+    "df = pd.get_dummies(dfo) # converte dados não numéricos.\n",
+    "\n",
+    "# ---------------------------------------- #\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfa = dfo.drop(columns=['stroke','id'])\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(dfa, df['stroke'], train_size=0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +289,7 @@
        "DecisionTreeClassifier(criterion='entropy')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
