more setup to do updated

--- a/proposta.ipynb
+++ b/proposta.ipynb
@@ -13,7 +13,13 @@
     "\n",
     "1. Treinar um classificador para predizer se houve ou não houve AVCs\n",
     "1. Verificar a acurácia do classificador\n",
-    "1. Identificar quais são os fatores que mais provavelmente estão ligados a ter AVCs\n",
+    "1. Identificar quais são os fatores que mais provavelmente estão ligados a ter AVCs\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "## Teoria\n",
     "\n",
@@ -30,7 +36,13 @@
     "Para dividir os conjuntos de treino e teste, você pode usar a função `train_test_split` do scikit-learn:\n",
     "\n",
     "    from sklearn.model_selection import train_test_split\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.5)\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.5)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "### Analisando os dados\n",
     "\n",
@@ -230,7 +242,14 @@
     "1. Comparar cada valor de $\\hat{y}$ a cada valor correspondente de $y$ (a saída \"gabarito\"),\n",
     "1. Dividir o número de vezes que a saída é igual pelo número total de valores\n",
     "\n",
-    "O nome desta medida é acurácia (*accuracy*). Se você quiser, pode usar o [accuracy implementado pelo scikit-learn](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.accuracy_score.html) para fazer essa avaliação.\n",
+    "O nome desta medida é acurácia (*accuracy*). Se você quiser, pode usar o [accuracy implementado pelo scikit-learn](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.accuracy_score.html) para fazer essa avaliação.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "#### Hipótese nula\n",
     "\n",
@@ -239,7 +258,14 @@
     "### Referências bibliográficas\n",
     "\n",
     "Na nossa análise de dados, podemos encontrar vários elementos ligados ao fenômeno que estamos analisando. Por exemplo, podemos descobrir que o fato de alguém preferir suco de laranja ao suco de maracujá é um fator que pode determinar o AVC. O problema disso é que não podemos saber, só com base nisso, se essa ligação é uma característica dos nossos dados ou se é uma característica geral do fenômeno. Por isso, sempre buscamos saber mais e verificar se há outros trabalhos que também apontam as mesmas ligações que encontramos. Para este tipo de análise, é importante encontrar trabalhos que foram publicados em veículos com revisão por pares (conferências e revistas são válidos, mas não materiais auto-publicados como blogs, vídeos ou *pre-prints*). Em especial, neste trabalho, vamos nos restringir apenas a materiais que estão disponíveis gratuitamente (open access), isto é, não utilizaremos materiais que precisam do pagamento de assinatura.\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "## Descrição do projeto\n",
     "\n",
@@ -254,7 +280,13 @@
     "* Link para o repositório onde está o projeto.\n",
     "* No `README.md` do repositório, deve haver um resumo, com até 400 palavras, explicando qual foi a metodologia usada, quais foram os principais resultados encontrados, e o que o grupo descobriu sobre AVCs à partir da análise dos dados.\n",
     "* O `demo.ipynb` deve estar comentado, célula a célula, em Markdown, explicando em linguagem natural a importância de cada passo e comentanto os resultados da execução de cada célula.\n",
-    "* O `demo.ipynb` deve ser colocado no repositório já executado, isto é, com todos os dados já gerados, de forma que seja possível visualizá-lo inteiramente sem executar as células.\n",
+    "* O `demo.ipynb` deve ser colocado no repositório já executado, isto é, com todos os dados já gerados, de forma que seja possível visualizá-lo inteiramente sem executar as células.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "\n",
     "**RUBRICA**\n",
@@ -271,13 +303,6 @@
     "| A | Além da aplicação correta do método, o grupo encontrou uma ou mais referências bibliográficas (citadas no `README.md`) que corroboram com suas descobertas, ou, alternativamente, encontrou referências que encontraram o oposto do que foi descoberto pelo grupo | Analisar |\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
