--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,13 +258,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1022"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "dfa = dfo.drop(columns=['stroke','id'])\n",
+    "dfa = df.drop(columns=['stroke','id'])\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(dfa, df['stroke'], train_size=0.5)"
+    "X_train, X_test, y_train, y_test = train_test_split(dfa, df['stroke'], train_size=0.2)\n",
+    "len(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.06510382032178708"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "clf = LinearRegression()\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "# gives a value 0 to 1, showing how accurate its results are\n",
+    "clf.score(X_test, y_test)"
    ]
   },
   {
@@ -325,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.3"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4
  },
