--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,18 +422,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    2443\n",
-       "1     112\n",
+       "-1    2438\n",
+       " 1     117\n",
        "Name: stroke, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,426 +443,43 @@
     "# dfa = dfa.drop(columns=['work_type_Never_worked','work_type_Private','work_type_Self-employed','work_type_children'])\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(dfa, df['stroke'], train_size=0.5)\n",
+    "y_train = y_train.replace(to_replace=0,value=-1)\n",
+    "y_test = y_test.replace(to_replace=0,value=-1)\n",
+    "\n",
     "y_train.value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>age</th>\n",
-       "      <th>hypertension</th>\n",
-       "      <th>heart_disease</th>\n",
-       "      <th>avg_glucose_level</th>\n",
-       "      <th>bmi</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>ever_married_No</th>\n",
-       "      <th>ever_married_Yes</th>\n",
-       "      <th>work_type_Govt_job</th>\n",
-       "      <th>work_type_Never_worked</th>\n",
-       "      <th>work_type_Private</th>\n",
-       "      <th>work_type_Self-employed</th>\n",
-       "      <th>work_type_children</th>\n",
-       "      <th>Residence_type_Rural</th>\n",
-       "      <th>Residence_type_Urban</th>\n",
-       "      <th>smoking_status_Unknown</th>\n",
-       "      <th>smoking_status_formerly smoked</th>\n",
-       "      <th>smoking_status_never smoked</th>\n",
-       "      <th>smoking_status_smokes</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>50</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>81</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>30</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>91</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>78</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>206</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>68</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>233</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>71</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>93</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5105</th>\n",
-       "      <td>53</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>72</td>\n",
-       "      <td>66</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5106</th>\n",
-       "      <td>42</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>210</td>\n",
-       "      <td>71</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5107</th>\n",
-       "      <td>23</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>70</td>\n",
-       "      <td>78</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5108</th>\n",
-       "      <td>38</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>56</td>\n",
-       "      <td>92</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5109</th>\n",
-       "      <td>17</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>61</td>\n",
-       "      <td>97</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5110 rows × 19 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      age  hypertension  heart_disease  avg_glucose_level  bmi  gender  \\\n",
-       "0      50             1              0                 81    0       0   \n",
-       "1      30             0              0                 91    0       0   \n",
-       "2      78             1              1                206    0       1   \n",
-       "3      68             1              1                233    0       1   \n",
-       "4      71             1              0                 93    0       0   \n",
-       "...   ...           ...            ...                ...  ...     ...   \n",
-       "5105   53             0              0                 72   66       1   \n",
-       "5106   42             0              0                210   71       0   \n",
-       "5107   23             1              0                 70   78       1   \n",
-       "5108   38             1              0                 56   92       0   \n",
-       "5109   17             1              0                 61   97       0   \n",
-       "\n",
-       "      ever_married_No  ever_married_Yes  work_type_Govt_job  \\\n",
-       "0                   1                 0                   0   \n",
-       "1                   0                 1                   0   \n",
-       "2                   0                 1                   0   \n",
-       "3                   0                 1                   0   \n",
-       "4                   0                 1                   0   \n",
-       "...               ...               ...                 ...   \n",
-       "5105                0                 1                   0   \n",
-       "5106                0                 1                   0   \n",
-       "5107                1                 0                   0   \n",
-       "5108                0                 1                   0   \n",
-       "5109                1                 0                   0   \n",
-       "\n",
-       "      work_type_Never_worked  work_type_Private  work_type_Self-employed  \\\n",
-       "0                          0                  1                        0   \n",
-       "1                          0                  1                        0   \n",
-       "2                          0                  1                        0   \n",
-       "3                          0                  1                        0   \n",
-       "4                          0                  0                        1   \n",
-       "...                      ...                ...                      ...   \n",
-       "5105                       0                  1                        0   \n",
-       "5106                       0                  1                        0   \n",
-       "5107                       0                  1                        0   \n",
-       "5108                       0                  1                        0   \n",
-       "5109                       0                  1                        0   \n",
-       "\n",
-       "      work_type_children  Residence_type_Rural  Residence_type_Urban  \\\n",
-       "0                      0                     0                     1   \n",
-       "1                      0                     0                     1   \n",
-       "2                      0                     1                     0   \n",
-       "3                      0                     1                     0   \n",
-       "4                      0                     1                     0   \n",
-       "...                  ...                   ...                   ...   \n",
-       "5105                   0                     1                     0   \n",
-       "5106                   0                     1                     0   \n",
-       "5107                   0                     0                     1   \n",
-       "5108                   0                     1                     0   \n",
-       "5109                   0                     1                     0   \n",
-       "\n",
-       "      smoking_status_Unknown  smoking_status_formerly smoked  \\\n",
-       "0                          0                               1   \n",
-       "1                          0                               0   \n",
-       "2                          0                               0   \n",
-       "3                          1                               0   \n",
-       "4                          0                               0   \n",
-       "...                      ...                             ...   \n",
-       "5105                       1                               0   \n",
-       "5106                       0                               0   \n",
-       "5107                       0                               0   \n",
-       "5108                       0                               0   \n",
-       "5109                       1                               0   \n",
-       "\n",
-       "      smoking_status_never smoked  smoking_status_smokes  \n",
-       "0                               0                      0  \n",
-       "1                               0                      1  \n",
-       "2                               1                      0  \n",
-       "3                               0                      0  \n",
-       "4                               1                      0  \n",
-       "...                           ...                    ...  \n",
-       "5105                            0                      0  \n",
-       "5106                            1                      0  \n",
-       "5107                            0                      1  \n",
-       "5108                            1                      0  \n",
-       "5109                            0                      0  \n",
-       "\n",
-       "[5110 rows x 19 columns]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dfa"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([[-7.00496787e-03],\n",
-       "        [ 2.12871011e-01],\n",
-       "        [ 9.93525506e-02],\n",
-       "        [-5.28508272e-04],\n",
-       "        [-7.29512322e-03],\n",
-       "        [ 3.37918732e-03],\n",
-       "        [-5.47044257e-01],\n",
-       "        [-3.40206279e-01],\n",
-       "        [ 2.63702805e+00],\n",
-       "        [-5.76135677e-02],\n",
-       "        [ 1.94102623e-01],\n",
-       "        [ 8.74863411e-01],\n",
-       "        [-4.78760561e-03],\n",
-       "        [ 6.90077898e-01],\n",
-       "        [ 8.40736226e-02],\n",
-       "        [ 7.96799923e-01],\n",
-       "        [ 2.97939134e-01],\n",
-       "        [-7.36489650e-01],\n",
-       "        [ 2.76111818e-01]]),\n",
-       " -0.00594163616819278)"
+       "(array([[ 5.08029501e-03],\n",
+       "        [ 5.86809172e-01],\n",
+       "        [-1.03568748e+00],\n",
+       "        [-1.09363515e-03],\n",
+       "        [-2.59491671e-02],\n",
+       "        [-1.02296285e+00],\n",
+       "        [ 1.02982834e+00],\n",
+       "        [ 6.73640539e-01],\n",
+       "        [ 9.44796385e-01],\n",
+       "        [-9.76095632e-02],\n",
+       "        [-7.69766338e-01],\n",
+       "        [-1.17565544e-01],\n",
+       "        [-3.98987823e-01],\n",
+       "        [-9.56044074e-01],\n",
+       "        [ 1.45936973e+00],\n",
+       "        [-4.85115618e-01],\n",
+       "        [-1.42806309e+00],\n",
+       "        [ 2.54856662e-01],\n",
+       "        [ 2.35930708e-01]]),\n",
+       " -0.03320714471469602)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,23 +518,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2555,) (2555, 1)\n"
+      "(2555,) (2555,)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.026652777830967252"
+       "0.639921722113503"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,7 +544,7 @@
     "    est = w.T @ pontos + b\n",
     "    return est\n",
     "\n",
-    "y_pred = predict( w, b, X_test.to_numpy().T )\n",
+    "y_pred = (predict( w, b, X_test.to_numpy().T )).reshape((2555,))\n",
     "# y_test = y_test.to_numpy()\n",
     "\n",
     "# ---------------------------------------- #\n",
@@ -935,8 +552,9 @@
     "def accuracy(y_test, y_est):\n",
     "    return np.mean(np.sign(y_test)==np.sign(y_est))\n",
     "\n",
-    "print(y_test.shape,y_pred.T.shape)\n",
-    "accuracy(y_test, y_pred.T)"
+    "print(y_test.shape,y_pred.shape)\n",
+    "\n",
+    "accuracy(y_test, y_pred)"
    ]
   },
   {
