--- a/demo.ipynb
+++ b/demo.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Pedro Antônio Silva\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\scipy\\__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.24.2\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    }
+   ],
    "source": [
     "# imports required to run the code.\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -18,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +168,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +405,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +771,7 @@
        "[5110 rows x 15 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,31 +782,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([[-0.33375019],\n",
-       "        [ 0.17311141],\n",
-       "        [ 0.00524039],\n",
-       "        [ 0.1221817 ],\n",
-       "        [ 0.18539083],\n",
-       "        [ 0.60980551],\n",
-       "        [ 0.21051687],\n",
-       "        [ 0.26283943],\n",
-       "        [ 0.17452625],\n",
-       "        [ 0.34422733],\n",
-       "        [ 0.34228292],\n",
-       "        [-0.39072243],\n",
-       "        [-0.44277853],\n",
-       "        [-0.42948555],\n",
-       "        [-0.42254523]]),\n",
-       " -0.1520556751607548)"
+       "(array([[ 0.06522718],\n",
+       "        [ 0.05802831],\n",
+       "        [-0.00167006],\n",
+       "        [ 0.16930393],\n",
+       "        [-0.14932616],\n",
+       "        [ 0.07007907],\n",
+       "        [-0.13378864],\n",
+       "        [-0.20066463],\n",
+       "        [ 0.09092023],\n",
+       "        [ 0.20758393],\n",
+       "        [ 0.20952864],\n",
+       "        [-0.20340091],\n",
+       "        [-0.16371896],\n",
+       "        [-0.15117667],\n",
+       "        [-0.10947845]]),\n",
+       " 0.001583172793530767)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -849,10 +858,10 @@
     {
      "data": {
       "text/plain": [
-       "0.037573385518591"
+       "0.03913894324853229"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
